--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
   "name": "react-image-list",
-  "version": "0.0.4",
+  "version": "0.1.4",
   "description": "react image list",
   "main": "index.js",
+  "peerDependencies": {
+    "react": "^0.14.0"
+  },
   "dependencies": {
     "classnames": "^2.1.3",
-    "react": "^0.13.3"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "devDependencies": {
-    "babel-core": "^5.5.8",
-    "babel-loader": "^5.1.4",
-    "jsx-loader": "^0.13.2",
-    "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.3.3",
-    "raw-loader": "^0.5.1",
-    "react-hot-loader": "^1.2.7",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.9",
+    "babel-loader": "^5.1.2",
+    "babel-plugin-react-transform": "^1.1.1",
+    "eslint": "^1.3.1",
+    "eslint-plugin-react": "^2.3.0",
+    "express": "^4.13.3",
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.0",
+    "redbox-react": "^1.0.1",
+    "rimraf": "^2.4.3",
+    "webpack": "^1.9.6",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "build": "npm run clean && npm run build:webpack",
+    "clean": "rimraf dist",
+    "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build:lib": "NODE_ENV=production babel src --out-dir lib",
     "css": "sass --watch scss/react-image-list.scss:dist/react-image-list.css"
   },
   "repository": {
