--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.3.0",
   "description": "react image list",
   "main": "index.js",
+  "peerDependencies": {
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
+  },
   "dependencies": {
     "classnames": "^2.1.3",
     "react": "^0.14.0",
