--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-image-list",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "react image list",
   "main": "index.js",
   "peerDependencies": {
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react": "^0.14.0 || >=15.0.0",
+    "react-dom": "^0.14.0 || >=15.0.0"
   },
   "dependencies": {
     "classnames": "^2.1.3"
@@ -18,6 +18,8 @@
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^2.3.0",
     "express": "^4.13.3",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
@@ -28,10 +30,10 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "npm run clean && npm run build:webpack",
+    "build": "rm -rf ./lib && BABEL_ENV=production babel --stage 0 src --out-dir lib",
     "clean": "rimraf dist",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build:lib": "babel -w --stage 0 src --out-dir lib",
+    "build:watch": "babel -w --stage 0 src --out-dir lib",
     "css": "sass --watch scss/react-image-list.scss:dist/react-image-list.css"
   },
   "repository": {
